--- a/content/carwash3/css/structure.css
+++ b/content/carwash3/css/structure.css
@@ -4447,7 +4447,8 @@ body.header-below:not(.template-slider) #Header {
 }
 #Top_bar .column {
 	display: flex;
-	margin-bottom: 0
+	margin-bottom: 0;
+	border-bottom: 2px solid #e77523;
 }
 .layout-full-width.header-fw #Action_bar .container, .layout-full-width.header-fw #Top_bar .container {
 	max-width: 100%;
@@ -12989,7 +12990,7 @@ body.table-hover:not(.woocommerce-page) table tr:hover td {
 	text-align: center;
 }
 .mfn-icon-box-top .icon-wrapper {
-	margin: 0 0 30px 0;
+	/* margin: 0 0 30px 0; */
 }
 .mfn-icon-box-bottom .icon-wrapper {
 	margin: 30px 0 0 0;
