"Changed max-height to height for .list-container in map.css"

--- a/content/carwash3/css/map.css
+++ b/content/carwash3/css/map.css
@@ -20,7 +20,7 @@
 /* Sidebar list container */
 .list-container {
     width: 30%;
-    max-height: 80vh;
+    ted height: 80vh;
     border-top-left-radius: 25px;
     border-bottom-left-radius: 25px;
     background-color: #ffffff;
