box shadow changing

--- a/content/carwash3/css/carwash3.css
+++ b/content/carwash3/css/carwash3.css
@@ -1696,7 +1696,7 @@ body {
   margin-right: 15px;
   margin-left: 15px;
   background-color: var(--background-color-secondary);
-  box-shadow: 30px 30px 60px 0 #0e2989;
+  box-shadow: 30px 30px 60px 0 #e77523;
   padding-top: 50px;
   padding-right: 10%;
   padding-bottom: 10px;
@@ -1746,7 +1746,7 @@ body {
   margin-right: 15px;
   margin-left: 15px;
   background-color: var(--background-color-secondary);
-  box-shadow: 30px 30px 60px 0 #0e2989;
+  box-shadow: 30px 30px 60px 0 #e77523;
   padding-top: 50px;
   padding-right: 10%;
   padding-bottom: 10px;
@@ -1796,7 +1796,7 @@ body {
   margin-right: 15px;
   margin-left: 15px;
   background-color: var(--background-color-secondary);
-  box-shadow: 30px 30px 60px 0 #0e2989;
+  box-shadow: 30px 30px 60px 0 #e77523;
   padding-top: 50px;
   padding-right: 10%;
   padding-bottom: 10px;
@@ -1846,7 +1846,7 @@ body {
   margin-right: 15px;
   margin-left: 15px;
   background-color: var(--background-color-secondary);
-  box-shadow: 30px 30px 60px 0 #0e2989;
+  box-shadow: 30px 30px 60px 0 #e77523;
   padding-top: 50px;
   padding-right: 10%;
   padding-bottom: 10px;
